RESOLVED FIXED201610
[GTK][WPE] Fixes for non-unified builds after r249022
https://bugs.webkit.org/show_bug.cgi?id=201610
Summary [GTK][WPE] Fixes for non-unified builds after r249022
Adrian Perez
Reported 2019-09-09 11:43:58 PDT
Since r249022 a few issues have crept in which have broken non-unified builds.
Attachments
Patch (5.36 KB, patch)
2019-09-09 11:52 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2019-09-09 11:52:52 PDT
Joseph Pecoraro
Comment 2 2019-09-09 11:54:09 PDT
Comment on attachment 378390 [details] Patch rs=me
WebKit Commit Bot
Comment 3 2019-09-10 08:11:02 PDT
Comment on attachment 378390 [details] Patch Clearing flags on attachment: 378390 Committed r249714: <https://trac.webkit.org/changeset/249714>
WebKit Commit Bot
Comment 4 2019-09-10 08:11:04 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-09-10 08:12:16 PDT
Radar WebKit Bug Importer
Comment 6 2019-09-10 08:12:18 PDT
Note You need to log in before you can comment on or make changes to this bug.