Source/WebKit/NetworkProcess/NetworkLoadChecker.h
@@ -26,6 +26,7 @@
 #pragma once
 
 #include "UserContentControllerIdentifier.h"
+#include "WebPageProxyIdentifier.h"
 #include <WebCore/ContentExtensionActions.h>
 #include <WebCore/ContentSecurityPolicyResponseHeaders.h>
 #include <WebCore/FetchOptions.h>
